Propagate the by_user flag to Notification Handlers

Whether a notification close was initiated by the user is known to the
WebNotificationDelegate, but the dispatching code towards the
notification handlers is unaware and assumes it was. This difference can
be significant, so propagate it when it's known.

BUG=760608

Change-Id: I23d1be533d62efae6e623758e9f2b0e6f3557e71
Reviewed-on: https://chromium-review.googlesource.com/655720
Reviewed-by: Anita Woodruff <awdf@chromium.org>
Commit-Queue: Peter Beverloo <peter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#500577}
Former-commit-id: 961c74da485f407caf877fe2eadc84e767af3ebc